added buttons events and a lot of features which i forget from the last commit

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 <header>
     <img id="header-logo" src="content/images/mongooselogo.png" alt="">
     <ul id="nav">
-        <li class="menu-button"><a id="#main">Главная</a></li>
-        <li class="menu-button"><a id="#workout">Занятия</a></li>
-        <li class="menu-button"><a id="#for-parents">Для родителей</a></li>
-        <li class="menu-button"><a id="#for-pupils">Для учеников</a></li>
+        <li class="menu-button"><a id="main-button">Главная</a></li>
+        <li class="menu-button"><a id="workout">Занятия</a></li>
+        <li class="menu-button"><a id="for-parents">Для родителей</a></li>
+        <li class="menu-button"><a id="for-pupils">Для учеников</a></li>
     </ul>
 </header>
 
 <body>
-
+<script src="mangoose.js"></script>
 <div id="content-wrapper">
-    <div class="content-window" id="media-wrapper"></div>
+    <div class="content-window" id="media-wrapper">
+        <div id="media-main"></div>
+    </div>
     <div class="content-window" id="description-wrapper"></div>
 </div>
 
-</body>
-
-</html>
+<script>
+    window.onload = main();
+</script>
+<html>
