--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <title>Kickboxing</title>
     <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <header>
-    <img id="header-logo" src="content/images/mongooselogo.png" alt="">
     <ul id="nav">
-        <li class="menu-button"><a id="main">Главная</a></li>
-        <li class="menu-button"><a id="workout">Занятия</a></li>
-        <li class="menu-button"><a id="for-parents">Для родителей</a></li>
-        <li class="menu-button"><a id="for-pupils">Для учеников</a></li>
+        <li class="menu-button"><a id="main">Головна</a></li>
+        <li class="menu-button"><a id="workout">Заняття</a></li>
+        <li class="menu-button"><a id="contacts">Контакти</a></li>
     </ul>
 </header>
 
@@ -24,8 +23,8 @@
 
     <div class="content-window" id="media-wrapper">
 
-        <div  class="fade" id="media-main">
-            <video  id="promo-video" src="content/videos/IMG_0823.mp4" controls></video>
+        <div class="fade" id="media-main">
+            <img id="main-portrait" src="content/images/slides/main-portrait.jpg" width="100%" alt="">
         </div>
 
         <div class="hidden" id="media-workout">
@@ -33,26 +32,44 @@
 
                 <!-- Полноразмерные изображения с числом и текстом подписи -->
                 <div class="mySlides fade">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="content/images/slides/1.jpg" style="width:100%">
-                    <div class="text">Подпись текст</div>
+                    <video  id="promo-video" src="content/videos/IMG_0823.mp4" controls></video>
+                    <div class="text">Атмосфера тренировочного процесса</div>
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="content/images/slides/2.jpg" style="width:100%">
-                    <div class="text">Подпись два</div>
+                    <img src="content/images/slides/1.jpg" style="width:100%" alt="">
+                    <div class="text">Тренер Рамін, Президент WAKO Рой Бейкер, та боєць клубу "Мангуст"</div>
                 </div>
 
                 <div class="mySlides fade">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="content/images/slides/3.jpg" style="width:100%">
-                    <div class="text">Подпись три</div>
+                    <img src="content/images/slides/2.jpg" style="width:100%" alt="">
+                    <div class="text">Тренер хвилюється за свого учня на змаганнях WAKO</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="content/images/slides/3.jpg" style="width:100%" alt="">
+                    <div class="text">Клуб Мангуст завжди готує чемпіонів!</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="content/images/slides/4.jpg" style="width:100%" alt="">
+                    <div class="text">Клуб Мангуст завжди готує чемпіонів!</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="content/images/slides/5.jpg" style="width:100%">
+                    <div class="text">Спортзал - це кузня, де кується дух і тіло.</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="content/images/slides/6.jpg" style="width:100%">
+                    <div class="text">Спортзал - це кузня, де кується дух і тіло.</div>
                 </div>
 
                 <!-- Вперед и назад кнопки -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
             </div>
             <br>
 
@@ -94,33 +111,66 @@
 
         </div>
 
-        <div class="hidden" id="media-for-parents">c</div>
+        <div class="hidden" id="media-contacts">c</div>
 
-        <div class="hidden" id="media-for-pupils">d</div>
+
     </div>
     <div class="content-window" id="description-wrapper">
+
         <div id="description-main">
-            <h1>ЗАГОЛОВОК К ВИДЕО
-            </h1>
-            <p>Описание параграф к видео</p>
+            <section>
+            <h1>ТРЕНЕР З КІКБОКСИНГУ</h1>
+            <h2>СПОРТИВНИЙ КЛУБ "МАНГУСТ" м. КИЇВ</h2>
+                <h2>Рамін Алвердіев - майстер спорту з кікбоксингу, боксу, ушу-саньда</h2>
+                <p id="main-description-text"> Кваліфікований тренер з досвідом роботи більш ніж 10 років. <br/>  Особистий підхід до кожного учня,
+                орієнтований на розвиток бійцівських якостей та спортивної дисципліни. <br/><br/>Тренер веде заняття в декількох группах:
+                на які поділяються учні по рівню підготовки та віку. Стартовий рівень, стать, вік - не мають значення. В нашому залі
+                є все необхідне для тренувань, при собі необхідно мати одяг для тренування та бажання бути сильним і здоровим.
+                <br/><br/><h4>Приходь і ставай сильнішим разом з нашою командою, <br> у клубі чемпіонів "Мангуст"!</h4></p>
+            </section>
+
         </div>
+
         <div class="hidden" id="description-workout">
-         <!--   <h1>ЗАГОЛОВОК К ТРЕНИРОВКАМ</h1>
-        <h2>Старшая группа</h2>
-            <ul>
-                <li>вторник</li>
-                <li>четверг</li>
-                <li>суббота</li>
+            <h1>РОЗКЛАД ЗАНЯТЬ З КІКБОКСИНГУ</h1>
+        <h2>ПЕРША ГРУППА</h2>
+            <ul class="workout-description-text">
+                <li class="blue-li"><span>Вівторок 18:30</span></li>
+                <li class="yellow-li"><span>Четвер 18:30</span></li>
+                <li class="blue-li"><span>Субота 18:30</span></li>
             </ul>
-        <h2>Детская группа</h2>
-            <ul>
-                <li>понедельник</li>
-                <li>среда</li>
-                <li>пятница</li>
-            </ul>-->
+        <h2>ДРУГА ГРУППА</h2>
+            <ul class="workout-description-text">
+                <li class="yellow-li"><span>Понеділок 20:00</span></li>
+                <li class="blue-li"><span>Середа 20:00</span></li>
+                <li class="yellow-li"><span>П'ятниця 20:00</span></li>
+            </ul>
+        <h2>ІНДИВІДУАЛЬНІ ТРЕНУВАННЯ</h2>
+            <p class="workout-description-text" style="font-size: 2.5vh">(Порядок індивідуальних тренувать обговорюється з тренером особисто або по телефону)</p>
+
         </div>
-        <div class="hidden" id="description-for-parents">3</div>
-        <div class="hidden" id="description-for-pupils">4</div>
+
+        <div class="hidden" id="description-contacts">
+            <h1>КОНТАКТИ</h1>
+            <section>
+                <h2>Деталі можете дізнатися за телефоном:</h2>
+                <p style="text-align: center">
+                <ul class="contacts-description-text">
+                <li class="transparent-li"><a href="tel:+380984103705">+380(98)410-37-05</a></li>
+                <li class="transparent-li"><a href="tel:+380984103705">+380(98)410-37-05</a>
+                    <br>
+                    <a href="https://www.facebook.com/ramin.alverdiyev">
+                        <img class=ref-logo src="content/images/logos/facebook-logo.png" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/raminalverdiyev/">
+                        <img class=ref-logo src="content/images/logos/insta-logo.png" alt="">
+                    </a></li>
+            </ul>
+                </p>
+            </section>
+
+        </div>
+
     </div>
 
 </div>
